Changes to fix tox and move tests outside so they are not present when package is installed with pip

--- a/tox.ini
+++ b/tox.ini
@@ -28,5 +28,5 @@ deps =
     docutils
     pygments
 commands =
-    rst2html.py --exit-status=2 README.rst /tmp/README.html
+    rst2html.py --exit-status=2 README.md /tmp/README.html
     rst2html.py --exit-status=2 HISTORY.rst /tmp/HISTORY.html
