Need to ask travis to enable python 27 and 35

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: false
 language: python
-python: 3.6
+python:
+  - '2.7'
+  - '3.5'
+  - '3.6'
 install: pip install tox coveralls wheel
 script: tox -e $TOXENV
 env:
