--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,20 @@ python:
 install: pip install tox coveralls wheel
 script: tox -e $TOXENV
 env:
-  - TOXENV=py27-django-111
-  - TOXENV=py35-django-111
-  - TOXENV=py36-django-111
-  - TOXENV=py27-django-110
-  - TOXENV=py35-django-110
-  - TOXENV=py36-django-110
-  - TOXENV=py27-django-19
-  - TOXENV=py35-django-19
-  - TOXENV=py36-django-19
-  - TOXENV=py27-django-18
-  - TOXENV=py36-django-18
-  - TOXENV=py27-lint
-  - TOXENV=readme
+  matrix:
+    - TOXENV=py27-django-111
+    - TOXENV=py35-django-111
+    - TOXENV=py36-django-111
+    - TOXENV=py27-django-110
+    - TOXENV=py35-django-110
+    - TOXENV=py36-django-110
+    - TOXENV=py27-django-19
+    - TOXENV=py35-django-19
+    - TOXENV=py36-django-19
+    - TOXENV=py27-django-18
+    - TOXENV=py36-django-18
+    - TOXENV=py27-lint
+    - TOXENV=readme
 after_success: coveralls
 notifications:
   webhooks:
