Default to 3.6, actual version is picked by matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 sudo: false
 language: python
-python:
-  - '2.7'
-  - '3.5'
-  - '3.6'
+python: 3.6
 install: pip install tox coveralls wheel
 script: tox -e $TOXENV
 env:
