--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,21 @@
 sudo: false
 language: python
-python:
-  - "2.7"
-  - "3.5"
-  - "3.6"
+python: 3.6
+env:
+  - TOXENV=py27-django-111
+  - TOXENV=py35-django-111
+  - TOXENV=py36-django-111
+  - TOXENV=py27-django-110
+  - TOXENV=py35-django-110
+  - TOXENV=py36-django-110
+  - TOXENV=py27-django-19
+  - TOXENV=py35-django-19
+  - TOXENV=py36-django-19
+  - TOXENV=py27-django-18
+  - TOXENV=py35-django-18
+  - TOXENV=py36-django-18
+  - TOXENV=py27-lint
+  - TOXENV=readme
 install: pip install tox coveralls wheel
 script: tox -e $TOXENV
 after_success: coveralls
