--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 sudo: false
 language: python
-python: 3.5
+python: 3.6
+addons:
+  apt:
+    sources:
+      - deadsnakes
+    packages:
+      - python3.5
 env:
   - TOXENV=py27-django-111
   - TOXENV=py35-django-111
