Fix lint errors

--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,8 @@ deps =
 
 [testenv:py27-lint]
 commands =
-    flake8 accountkit tests examples
-    isort --check-only --recursive accountkit tests examples
+    flake8 accountkit tests
+    isort --check-only --recursive accountkit tests
 
 [testenv:readme]
 deps =
