Integrate with travis (#2)

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,6 @@ envlist =
 commands = make test
 whitelist_externals = make
 deps =
-    django-17: Django>=1.7,<1.8
     django-18: Django>=1.8,<1.9
     django-19: Django>=1.9,<1.10
     django-110: Django>=1.10,<1.11
@@ -20,8 +19,8 @@ deps =
 
 [testenv:py27-lint]
 commands =
-    flake8 accountkit tests examples
-    isort --check-only --recursive accountkit tests examples
+    flake8 accountkit tests
+    isort --check-only --recursive accountkit tests
 
 [testenv:readme]
 deps =
