--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,35 @@
 sudo: false
 language: python
-python:
-  - '2.7'
-  - '3.5'
-  - '3.6'
-install: pip install tox coveralls wheel
-script: tox -e $TOXENV
-env:
-  - TOXENV=py27-django-111
-  - TOXENV=py35-django-111
-  - TOXENV=py36-django-111
-  - TOXENV=py27-django-110
-  - TOXENV=py35-django-110
-  - TOXENV=py36-django-110
-  - TOXENV=py27-django-19
-  - TOXENV=py35-django-19
-  - TOXENV=py36-django-19
-  - TOXENV=py27-django-18
-  - TOXENV=py36-django-18
-  - TOXENV=py27-lint
-  - TOXENV=readme
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py27-django-111
+    - python: 2.7
+      env: TOXENV=py27-django-110
+    - python: 2.7
+      env: TOXENV=py27-django-19
+    - python: 2.7
+      env: TOXENV=py27-django-18
+    - python: 3.5
+      env: TOXENV=py35-django-111
+    - python: 3.5
+      env: TOXENV=py35-django-110
+    - python: 3.5
+      env: TOXENV=py35-django-19
+    - python: 3.5
+      env: TOXENV=py35-django-18
+    - python: 3.6
+      env: TOXENV=py36-django-111
+    - python: 3.6
+      env: TOXENV=py36-django-110
+    - python: 3.6
+      env: TOXENV=py36-django-19
+    - python: 3.6
+      env: TOXENV=py36-django-18
+    - env: TOXENV=lint
+    - env: TOXENV=readme
+install: travis_retry pip install tox coveralls wheel
+script: tox -v -- -v
 after_success: coveralls
 notifications:
   webhooks:
